# articlenator

./: .gitignore  ARCHITECTURE.md  CHECKPOINT.md  CLAUDE.md  DEPLOYMENT.md  DOCKER.md  README.md  YOUTUBE_COOKIE_SECURITY_PLAN.md  YOUTUBE_DOWNLOAD_REQUIREMENTS.md  flake.nix  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
k8s/: deployment.yaml  longhorn-pvc.yaml  twitter-app.yaml
src/twitter_articlenator/: __init__.py  __main__.py  app.py  config.py  logging.py  security.py  version.py
src/twitter_articlenator/pdf/: __init__.py  generator.py
src/twitter_articlenator/routes/: __init__.py  api.py  pages.py
src/twitter_articlenator/sources/: __init__.py  base.py  bookmarks.py  browser_pool.py  twitter_playwright.py  video_downloader.py  web.py  youtube_cookies.py  youtube_downloader.py  youtube_oauth.py
src/twitter_articlenator/static/: style.css
src/twitter_articlenator/templates/: base.html  bookmarks.html  cookie_guide.html  index.html  videos.html  youtube.html
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_article_images.py  test_user_journey.py  test_video_download.py  test_youtube_download.py
tests/e2e/pages/: __init__.py  bookmarks_page.py  cookie_guide_page.py  index_page.py  videos_page.py  youtube_page.py
tests/integration/: test_app.py  test_async_issues.py  test_convert_progress.py  test_session_resume.py
tests/unit/: test_async_helpers.py  test_browser_pool.py  test_config.py  test_logging.py  test_pdf_generator.py  test_session_meta.py  test_sources_base.py  test_sources_twitter.py  test_sources_web.py  test_youtube_cookies.py  test_youtube_downloader.py  test_youtube_oauth.py
