[project]
name = "twitter-articlenator"
version = "0.1.0"
description = "Convert X/Twitter articles to e-reader PDFs"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1",
    "playwright>=1.57",
    "weasyprint>=67.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "structlog>=24.4",
    "orjson>=3.10",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.5",
    "httpx>=0.28",
]

[project.scripts]
twitter-articlenator = "twitter_articlenator.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/twitter_articlenator"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.5",
    "httpx>=0.28",
    "ty>=0.0.8",
    "vulture>=2.14",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=twitter_articlenator --cov-report=term-missing"
