# Package metadata only - dependencies managed by Nix (see flake.nix)
[project]
name = "twitter-articlenator"
version = "0.2.0"
description = "Convert X/Twitter articles to e-reader PDFs"
requires-python = ">=3.12"

[project.scripts]
twitter-articlenator = "twitter_articlenator.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twitter_articlenator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
